[package]
name = "pubky-private-messenger"
version = "0.1.0"
description = "Pubky Private Messenger"
authors = ["Corey Phillips"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pubky_private_messenger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
log = "0.4"
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1.0", features = ["full"] }
pubky = "0.4.2"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
pkarr = "3.7.1"
pubky-common = "0.3.1"
blake3 = "1.8.2"
hex = "0.4.3"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
sha2 = "0.10.9"
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.1.1"
uuid = { version = "1.15.1", features = ["v4"] }
snow = "0.9.6"
once_cell = "1.21.3"
base64 = "0.22.1"
rand_core = "0.6.4"
hkdf = "0.13.0-pre.5"
chrono = "0.4.40"
