[package]
name = "pubky-private-messenger"
version = "0.4.2"
description = "Pubky Private Messenger"
authors = ["Corey Phillips"]
license = "MIT"
repository = "https://github.com/coreyphillips/pubky-private-messenger"
edition = "2021"

[lib]
name = "pubky_private_messenger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
log = "0.4"
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1.0", features = ["full"] }
pubky = "0.4.2"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
pkarr = "3.7.1"
pubky-common = "0.3.1"
blake3 = "1.8.2"
hex = "0.4.3"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
sha2 = "0.10.9"
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.1.1"
uuid = { version = "1.15.1", features = ["v4"] }
snow = "0.9.6"
once_cell = "1.21.3"
base64 = "0.22.1"
rand_core = "0.6.4"
chrono = "0.4.40"
hkdf = { version = "0.12.4", features = ["std"] }
chacha20poly1305 = "0.10.1"
digest = "0.10.7"
futures = "0.3.31"
